@@ -80,7 +80,7 @@ void append_string(char** str, const char* str_to_append);
 void append_string_n(char** str, const char* str_to_append, size_t applen);
 void append_quoted_string(char** str, const char* str_to_append);
 
-/* you have to free the content */
+/* returns errno in error case / you have to free the content */
 int read_file(const char* file, char** content);
 
 int copy_file(const char* source, const char* dest);
